# recurrent_tasks

./: README.md  pyproject.toml
recurrent_tasks/: __main__.py
