[project]
name = "recurrent-tasks"
version = "0.2.0"
description = ""
authors = [
    {name = "Dimitar Dimitrov",email = "mitkodimitar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[project.scripts]
recurrent_tasks = "recurrent_tasks.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
reorder-python-imports = "^3.15.0"
black = "^25.1.0"
pylint = "^3.3.7"
mypy = "^1.15.0"
types-requests = "^2.32.0.20250515"
ipython = "^9.2.0"

